@@ -5,6 +5,7 @@
 3. Allow all radio sections to be pinned.
 4. Limit text (album, or artist) in grid to 80 characters, and add '...' if
    longer.
+5. Show volume level under button in mobile toolbar.
 
 0.2.5
 -----
